--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -2,6 +2,7 @@
 
 .main__container {
   width: $width;
+  min-height: 100vh;
   margin: 10px auto 30px auto;
   display: flex;
   flex-direction: column;
